testdata/golden/sema/invalid/compare_nested_call_block_missing_return.sg
fn consume(x: int) -> nothing {
    return nothing;
}

fn main(flag: bool) -> nothing {
    consume(compare flag {
        true => {
            1;
        }
        false => {}
    });
    return nothing;
}
